Added tests for ISLT, CPAL, Chase. Added extra comments

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -3518,6 +3518,18 @@
       <id>70a03c02-cdec-4f43-b0e6-212bf2c9ab71</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\CBB.csv">
+      <id>4876dfd5-5216-4274-a3a7-7a9efe7b4d3f</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\Chase.csv">
+      <id>97f2045a-705d-489e-83d2-72b522769643</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\CPAL.csv">
+      <id>0add9006-be0d-4445-8a50-ac003ba1b31a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\extract1.csv">
       <id>7833311f-d735-4268-a53a-5ca69a633d41</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -3532,6 +3544,10 @@
     </None>
     <None Include="csv\GMLT.csv">
       <id>0c540524-bbb7-46ae-aea3-81e0aada534a</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\ISLT.csv">
+      <id>1e9f9f64-13d9-4cb8-a201-cfedef4ba1f1</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="csv\PRD1752.csv">
@@ -3865,12 +3881,28 @@
       <id>929ec6a6-26b1-4feb-b158-b6651e6aad11</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="rawData\CBB.txt">
+      <id>1afae32d-d32a-448c-8bcc-3fba44ed59cc</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\Chase.txt">
+      <id>81f6ba26-e670-40dd-8213-f4cbe65378a8</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\CPAL.txt">
+      <id>1b83bee4-a890-4945-9021-6b2fb8b6c12f</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="rawData\FollowUp.txt">
       <id>abfa05ce-faaf-4835-ac0f-a9de2c65e92c</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\GMLT.txt">
       <id>d1f075d2-cb3f-4a5c-9709-c7d054e4c342</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\ISLT.txt">
+      <id>80e0e5fe-16ca-40da-b84f-9b3cc22b6555</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\PartialCBB.txt">
