Added Finger Tapping to outcomes test case

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -3542,6 +3542,10 @@
       <id>ab2c1665-1439-489e-8d03-af44e0e360b1</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="csv\FT.csv">
+      <id>fae214b1-7b44-4d54-bdd0-b9dfb5e1ba15</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="csv\GMLT.csv">
       <id>0c540524-bbb7-46ae-aea3-81e0aada534a</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -3895,6 +3899,10 @@
     </None>
     <None Include="rawData\FollowUp.txt">
       <id>abfa05ce-faaf-4835-ac0f-a9de2c65e92c</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\FT.txt">
+      <id>31f88955-7fbd-47e1-bdcc-12899872e0d0</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\GMLT.txt">
