Added the remaining validated Cognitive Tests to the processor testing

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -3563,7 +3563,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="csv\IDSST.csv">
-      <id>c681e31d-82ad-438f-8ee8-4553cec68a4f</id>
+      <id>a162bac6-9d5b-4f95-af28-efd80dead1e4</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="csv\ISLT.csv">
@@ -3572,6 +3572,10 @@
     </None>
     <None Include="csv\PRD1752.csv">
       <id>568dbc08-0377-4410-a76a-afdc6fe47e53</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="csv\SAT.csv">
+      <id>d642c3de-4d13-4067-9536-a5b755f7bb1e</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="ExtractsPage\Click_DownloadExtract_Button.rxrec">
@@ -3926,7 +3930,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\IDSST.txt">
-      <id>4a4f1c5a-9ae2-4ba2-aa41-2324e7f0e103</id>
+      <id>46ffe5df-805c-46d8-9b00-fb653ce8ea88</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\ISLT.txt">
@@ -3943,6 +3947,10 @@
     </None>
     <None Include="rawData\rawData1.txt">
       <id>28c81b25-cf62-4d20-b771-9257a1bffe7e</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\SAT.txt">
+      <id>6e49ac9a-5342-40e8-8c9e-7a47fea59cc4</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="ReportsPage\Click_BatteryConfig_Report.rxrec">
