Fixed issues with Forgot/Reset password test cases

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -1945,6 +1945,18 @@
       <id>616633ba-9fea-4a10-8169-85f813f27f25</id>
       <BoundTo>c10b2229-5e53-4147-9d04-22c63030510c</BoundTo>
     </Compile>
+    <Compile Include="LoginPage\Enter_New_Password.cs">
+      <BoundTo>65e15b41-b218-4a7a-8f5d-f9d413695795</BoundTo>
+      <DependentUpon>Enter_New_Password.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>0e0803d7-12dd-4847-bae5-272a5dc74cd7</id>
+    </Compile>
+    <Compile Include="LoginPage\Enter_New_Password.UserCode.cs">
+      <BoundTo>65e15b41-b218-4a7a-8f5d-f9d413695795</BoundTo>
+      <DependentUpon>Enter_New_Password.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>27427c4c-cbba-45e2-bad1-d468859d1847</id>
+    </Compile>
     <Compile Include="LoginPage\Enter_Password.cs">
       <DependentUpon>Enter_Password.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -3759,6 +3771,11 @@
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>c10b2229-5e53-4147-9d04-22c63030510c</id>
       <recordtableid>00e96411-5300-4894-bcd5-90fc91208d72</recordtableid>
+    </None>
+    <None Include="LoginPage\Enter_New_Password.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>65e15b41-b218-4a7a-8f5d-f9d413695795</id>
+      <recordtableid>92a7d94c-f607-484d-b1b6-0dacda135350</recordtableid>
     </None>
     <None Include="LoginPage\Enter_Password.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
