--- a/RedCapCloud/RedCapCloud/RedCapCloud.csproj
+++ b/RedCapCloud/RedCapCloud/RedCapCloud.csproj
@@ -212,14 +212,14 @@
       <id>4767605c-432d-4dcb-823f-3c2cf59f09c0</id>
       <BoundTo>fc7b2d1b-9a7c-4d4d-ba12-b98bbedce7ed</BoundTo>
     </Compile>
-    <Compile Include="AddEventDefinitionsPage\Click_AddCRF_Button.cs">
-      <DependentUpon>Click_AddCRF_Button.rxrec</DependentUpon>
+    <Compile Include="AddEventDefinitionsPage\Click_AddInstrument_Button.cs">
+      <DependentUpon>Click_AddInstrument_Button.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>1bae461f-be3e-4da9-8a3b-87b2ba43b19b</id>
       <BoundTo>d1e805c9-228b-4df3-92c8-328e2686aa8c</BoundTo>
     </Compile>
-    <Compile Include="AddEventDefinitionsPage\Click_AddCRF_Button.UserCode.cs">
-      <DependentUpon>Click_AddCRF_Button.rxrec</DependentUpon>
+    <Compile Include="AddEventDefinitionsPage\Click_AddInstrument_Button.UserCode.cs">
+      <DependentUpon>Click_AddInstrument_Button.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>86848806-29fe-4202-b170-3c2ea286b5f8</id>
       <BoundTo>d1e805c9-228b-4df3-92c8-328e2686aa8c</BoundTo>
@@ -491,73 +491,73 @@
     <Compile Include="AssemblyInfo.cs">
       <id>899d6693-82bc-458c-8653-6516ceb665d0</id>
     </Compile>
-    <Compile Include="CRFsPage\Click_CRFTab.cs">
-      <DependentUpon>Click_CRFTab.rxrec</DependentUpon>
+    <Compile Include="InstrumentsPage\Click_Instruments_Tab.cs">
+      <DependentUpon>Click_Instruments_Tab.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>5d818e35-e358-49fd-80b8-d592b17534c7</id>
       <BoundTo>2e52d8fe-525a-4499-a54e-8354ba122ef5</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Click_CRFTab.UserCode.cs">
-      <DependentUpon>Click_CRFTab.rxrec</DependentUpon>
+    <Compile Include="InstrumentsPage\Click_Instruments_Tab.UserCode.cs">
+      <DependentUpon>Click_Instruments_Tab.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>4a44acde-3f43-4259-9289-1d0d7f2bf0ba</id>
       <BoundTo>2e52d8fe-525a-4499-a54e-8354ba122ef5</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Click_DeleteExistingCRF_Checkbox.cs">
-      <DependentUpon>Click_DeleteExistingCRF_Checkbox.rxrec</DependentUpon>
+    <Compile Include="InstrumentsPage\Click_Delete_Instruments_Checkbox.cs">
+      <DependentUpon>Click_Delete_Instruments_Checkbox.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>440d3db6-a22d-46a3-9196-11105870aa5f</id>
       <BoundTo>ee2a0380-428f-4f09-b76d-623cb449c70a</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Click_DeleteExistingCRF_Checkbox.UserCode.cs">
-      <DependentUpon>Click_DeleteExistingCRF_Checkbox.rxrec</DependentUpon>
+    <Compile Include="InstrumentsPage\Click_Delete_Instruments_Checkbox.UserCode.cs">
+      <DependentUpon>Click_Delete_Instruments_Checkbox.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>c1a71940-b780-4599-a995-4857a3af8f78</id>
       <BoundTo>ee2a0380-428f-4f09-b76d-623cb449c70a</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Click_ImportDataDictionary.cs">
+    <Compile Include="InstrumentsPage\Click_ImportDataDictionary.cs">
       <DependentUpon>Click_ImportDataDictionary.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>35ba3ca3-cc68-43ef-8ef7-c24b462362b2</id>
       <BoundTo>b1eabf23-259d-4c93-98c9-960fdef539fc</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Click_ImportDataDictionary.UserCode.cs">
+    <Compile Include="InstrumentsPage\Click_ImportDataDictionary.UserCode.cs">
       <DependentUpon>Click_ImportDataDictionary.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>804d3a9e-0686-4230-9221-36bb35cf27cb</id>
       <BoundTo>b1eabf23-259d-4c93-98c9-960fdef539fc</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Click_Tools_Menu.cs">
+    <Compile Include="InstrumentsPage\Click_Tools_Menu.cs">
       <DependentUpon>Click_Tools_Menu.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>e8d068d4-7071-4a99-b963-a7d7bc6d9089</id>
       <BoundTo>a6f99c2f-13ee-409d-99bc-f02983079e52</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Click_Tools_Menu.UserCode.cs">
+    <Compile Include="InstrumentsPage\Click_Tools_Menu.UserCode.cs">
       <DependentUpon>Click_Tools_Menu.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>d72f2499-3e15-43b2-9b2e-e75d03885c44</id>
       <BoundTo>a6f99c2f-13ee-409d-99bc-f02983079e52</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Click_Upload.cs">
+    <Compile Include="InstrumentsPage\Click_Upload.cs">
       <DependentUpon>Click_Upload.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>469c609a-2631-41eb-a9ab-8812cd6f1827</id>
       <BoundTo>50717831-366b-4039-8a3e-8ee4a2fc9d92</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Click_Upload.UserCode.cs">
+    <Compile Include="InstrumentsPage\Click_Upload.UserCode.cs">
       <DependentUpon>Click_Upload.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>01b53003-a5fb-45a8-a8d3-0dd07d54a7cc</id>
       <BoundTo>50717831-366b-4039-8a3e-8ee4a2fc9d92</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Select_CSV.cs">
+    <Compile Include="InstrumentsPage\Select_CSV.cs">
       <DependentUpon>Select_CSV.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>967fe8cf-b91c-4aa1-8406-8932463b6d2b</id>
       <BoundTo>9d059e89-5bfe-4101-9f56-de7cddc1f9fd</BoundTo>
     </Compile>
-    <Compile Include="CRFsPage\Select_CSV.UserCode.cs">
+    <Compile Include="InstrumentsPage\Select_CSV.UserCode.cs">
       <DependentUpon>Select_CSV.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>f84073a1-ace0-475e-95ee-64eee8327f0a</id>
@@ -1327,7 +1327,7 @@
       <id>fc7b2d1b-9a7c-4d4d-ba12-b98bbedce7ed</id>
       <recordtableid>8ca795d4-5f53-4816-a1a6-b11ca638a59a</recordtableid>
     </None>
-    <None Include="AddEventDefinitionsPage\Click_AddCRF_Button.rxrec">
+    <None Include="AddEventDefinitionsPage\Click_AddInstrument_Button.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>d1e805c9-228b-4df3-92c8-328e2686aa8c</id>
       <recordtableid>38dd1e62-9934-472e-8c94-887145d1059b</recordtableid>
@@ -1465,32 +1465,32 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>568bb289-c030-4745-b497-81589bf664eb</id>
     </Content>
-    <None Include="CRFsPage\Click_CRFTab.rxrec">
+    <None Include="InstrumentsPage\Click_Instruments_Tab.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>2e52d8fe-525a-4499-a54e-8354ba122ef5</id>
       <recordtableid>3241acf1-d56b-48a1-ac24-1729dc6775d9</recordtableid>
     </None>
-    <None Include="CRFsPage\Click_DeleteExistingCRF_Checkbox.rxrec">
+    <None Include="InstrumentsPage\Click_Delete_Instruments_Checkbox.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>ee2a0380-428f-4f09-b76d-623cb449c70a</id>
       <recordtableid>a6aabcb3-1a03-4c1f-8c45-a574846d4f4b</recordtableid>
     </None>
-    <None Include="CRFsPage\Click_ImportDataDictionary.rxrec">
+    <None Include="InstrumentsPage\Click_ImportDataDictionary.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>b1eabf23-259d-4c93-98c9-960fdef539fc</id>
       <recordtableid>3b2f8a6f-b9a4-46d0-a6b9-2da4be88796d</recordtableid>
     </None>
-    <None Include="CRFsPage\Click_Tools_Menu.rxrec">
+    <None Include="InstrumentsPage\Click_Tools_Menu.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>a6f99c2f-13ee-409d-99bc-f02983079e52</id>
       <recordtableid>13871cb9-c76a-400f-bd8b-8d53ae8c2114</recordtableid>
     </None>
-    <None Include="CRFsPage\Click_Upload.rxrec">
+    <None Include="InstrumentsPage\Click_Upload.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>50717831-366b-4039-8a3e-8ee4a2fc9d92</id>
       <recordtableid>d65da13c-82fa-4a0f-b891-fd2e3c602605</recordtableid>
     </None>
-    <None Include="CRFsPage\Select_CSV.rxrec">
+    <None Include="InstrumentsPage\Select_CSV.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>9d059e89-5bfe-4101-9f56-de7cddc1f9fd</id>
       <recordtableid>26f5ca72-1f84-4986-a06c-f51a8360a311</recordtableid>
@@ -1856,7 +1856,7 @@
     <Folder Include="AddEventDefinitionsPage">
       <id>688b1b9d-e530-4e59-b7a3-f688445e7006</id>
     </Folder>
-    <Folder Include="CRFsPage">
+    <Folder Include="InstrumentsPage">
       <id>3a612c5f-b886-4025-bd55-a019dc487e55</id>
     </Folder>
     <Folder Include="EventDefinitionsPage">
