Updated Data Connectors and made some filename changes

--- a/RedCapCloud/RedCapCloud/RedCapCloud.csproj
+++ b/RedCapCloud/RedCapCloud/RedCapCloud.csproj
@@ -791,14 +791,14 @@
       <id>b9de6b18-c9b4-4db1-8ea9-1503dd03b6da</id>
       <BoundTo>1b52cf89-e770-4ca9-a665-4b22286c8d0a</BoundTo>
     </Compile>
-    <Compile Include="ParametersPage\Select_UseCustomCRF.cs">
-      <DependentUpon>Select_UseCustomCRF.rxrec</DependentUpon>
+    <Compile Include="ParametersPage\Select_UseCustomInstrument_Checkbox.cs">
+      <DependentUpon>Select_UseCustomInstrument_Checkbox.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
       <id>9a2f8a50-98cb-4b3b-a906-1d3b51a5ab13</id>
       <BoundTo>8e8a526b-ff86-4c8b-950c-e243b6ca2605</BoundTo>
     </Compile>
-    <Compile Include="ParametersPage\Select_UseCustomCRF.UserCode.cs">
-      <DependentUpon>Select_UseCustomCRF.rxrec</DependentUpon>
+    <Compile Include="ParametersPage\Select_UseCustomInstrument_Checkbox.UserCode.cs">
+      <DependentUpon>Select_UseCustomInstrument_Checkbox.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>c116d9ea-266b-4c4d-9ce0-77569c010e59</id>
       <BoundTo>8e8a526b-ff86-4c8b-950c-e243b6ca2605</BoundTo>
@@ -1598,7 +1598,7 @@
       <id>1b52cf89-e770-4ca9-a665-4b22286c8d0a</id>
       <recordtableid>b6e13818-a747-4523-9f1d-ade6387d6019</recordtableid>
     </None>
-    <None Include="ParametersPage\Select_UseCustomCRF.rxrec">
+    <None Include="ParametersPage\Select_UseCustomInstrument_Checkbox.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>8e8a526b-ff86-4c8b-950c-e243b6ca2605</id>
       <recordtableid>43197699-bc3a-4d20-ac7b-de542bc93625</recordtableid>
