--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -20,6 +20,8 @@
     <IntermediateOutputPath>obj\$(Configuration)\</IntermediateOutputPath>
     <WarningLevel>4</WarningLevel>
     <StartAction>Project</StartAction>
+    <SignAssembly>False</SignAssembly>
+    <DelaySign>False</DelaySign>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -1298,6 +1300,30 @@
     </Compile>
     <Compile Include="APIModules\Clear_ExternalID.cs">
       <id>dd1b110c-c8f3-4cc6-a608-0cd3acad3db4</id>
+    </Compile>
+    <Compile Include="APIModules\GetResetToken.cs">
+      <BoundTo>8b4a2f89-77f0-466c-b040-4b7936a31220</BoundTo>
+      <DependentUpon>GetResetToken.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>50004330-04d8-4496-ad68-caf37cdb96a1</id>
+    </Compile>
+    <Compile Include="APIModules\GetResetToken.UserCode.cs">
+      <BoundTo>8b4a2f89-77f0-466c-b040-4b7936a31220</BoundTo>
+      <DependentUpon>GetResetToken.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>685c53b0-7d57-4385-a6dc-2f291e52004f</id>
+    </Compile>
+    <Compile Include="APIModules\G_Secret.cs">
+      <BoundTo>915a7715-2246-45d7-9b83-536fcaf59f17</BoundTo>
+      <DependentUpon>G_Secret.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>3dc3babb-63ba-4690-9a5a-e8d73b374697</id>
+    </Compile>
+    <Compile Include="APIModules\G_Secret.UserCode.cs">
+      <BoundTo>915a7715-2246-45d7-9b83-536fcaf59f17</BoundTo>
+      <DependentUpon>G_Secret.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>f8955114-cf3b-4bdf-8733-7e8dbae6b7e3</id>
     </Compile>
     <Compile Include="AssemblyInfo.cs">
       <id>972ac0ea-8bc6-4fff-b84a-433c9e389b8b</id>
@@ -3450,6 +3476,16 @@
       <id>7adc8802-d178-40e7-9ff0-8a79e4aa8d69</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>70ee2cb7-7981-4f16-9f4b-d4fbea372124</recordtableid>
+    </None>
+    <None Include="APIModules\GetResetToken.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>8b4a2f89-77f0-466c-b040-4b7936a31220</id>
+      <recordtableid>9ecd415f-eabd-42d3-912c-00d78f3c79d2</recordtableid>
+    </None>
+    <None Include="APIModules\G_Secret.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>915a7715-2246-45d7-9b83-536fcaf59f17</id>
+      <recordtableid>b5c1f78b-d628-4e9c-83b0-597bcacc9905</recordtableid>
     </None>
     <None Include="app.config">
       <id>4fde1d06-b4d6-4207-b920-eeffc7d6cb1c</id>
