- Changed the secret key generating process - Changed the secret key r-generating process - Changed the server version  validation process - Changed the client  version  validation process

--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -1916,6 +1916,18 @@
       <DependentUpon>Verify_Secure_URL.rxrec</DependentUpon>
       <UserCode>true</UserCode>
     </Compile>
+    <Compile Include="General\Verify_Version_Client.cs">
+      <BoundTo>179b7486-a612-4e51-a5d1-6ab15b29afd5</BoundTo>
+      <DependentUpon>Verify_Version_Client.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>6709eb24-fd06-47ab-aeef-e7fbf2c289a7</id>
+    </Compile>
+    <Compile Include="General\Verify_Version_Client.UserCode.cs">
+      <BoundTo>179b7486-a612-4e51-a5d1-6ab15b29afd5</BoundTo>
+      <DependentUpon>Verify_Version_Client.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>7ff2a281-7929-48d8-8776-6958263d82f6</id>
+    </Compile>
     <Compile Include="General\Verify_Version_Deployed.cs">
       <id>88f21865-db17-4fbc-9bf3-5620b6b22e94</id>
       <BoundTo>19edc20e-5832-4454-a1b4-82cdc3cbceca</BoundTo>
@@ -3807,6 +3819,11 @@
       <id>bddda510-2081-4c97-942f-f3010a321e3d</id>
       <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
       <recordtableid>8720e4ed-cabc-4f47-8984-b71fc93cb4df</recordtableid>
+    </None>
+    <None Include="General\Verify_Version_Client.rxrec">
+      <BoundTo>bb77de91-48e5-4406-abc3-91f7ae6e5d00</BoundTo>
+      <id>179b7486-a612-4e51-a5d1-6ab15b29afd5</id>
+      <recordtableid>bbd7de50-f153-4542-b412-b02ff4df214c</recordtableid>
     </None>
     <None Include="General\Verify_Version_Deployed.rxrec">
       <id>19edc20e-5832-4454-a1b4-82cdc3cbceca</id>
