QC-39 - Updated CSP and RCC regression tests to work in new structure. Updated known results for processed GMLT, Chase and ISLT tests due to changes made in PRD-1550. Fixed a timing issue on CSP login page where the login button is clicked before page is fully loaded.

--- a/eSourcePlatform/RedCapCloud/RedCapCloud/RedCapCloud.csproj
+++ b/eSourcePlatform/RedCapCloud/RedCapCloud/RedCapCloud.csproj
@@ -49,6 +49,9 @@
     <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper">
+      <HintPath>..\..\..\_assets\engine\bin\Debug\CsvHelper.dll</HintPath>
+    </Reference>
     <Reference Include="engine">
       <HintPath>..\..\..\_assets\engine\bin\Debug\engine.dll</HintPath>
     </Reference>
