--- a/eSourcePlatform/CSP/CSP.csproj
+++ b/eSourcePlatform/CSP/CSP.csproj
@@ -3629,6 +3629,7 @@
     </None>
     <None Include="csv\CPAL.csv">
       <id>806995ce-4ea8-46ed-89ba-57e6793bde29</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="csv\extract1.csv">
       <id>9d814ac2-d49a-46d1-8534-3e3fba54fad0</id>
