Updated gitignore to ignore Authentication.csv and Ranorex settings

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 **/*.rxuser
 **/*.pref
 **/*TCS_LIB.dll
+Ranorex.rxsettings
 
 # Build results
 **/*[Dd]ebug/
@@ -21,3 +22,6 @@
 **/*.psess
 **/*.vsp
 **/*.vspx
+
+# Other Files
+Authentication.csv
